# initrunner

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE-APACHE  README.ja.md  README.md  README.zh-CN.md  SECURITY.md  TOOL_IDEAS.md  docker-compose.cerbos.yml  docker-compose.yml  install.sh  package-lock.json  pyproject.toml  railway.json  render.yaml  role.yaml  role2.yaml  test-review.yaml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  tool_request.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml  security.yml  testpypi.yml
dashboard/: components.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
dashboard/src/: app.css  app.html  hooks.client.ts
deploy/: docker-entrypoint.sh  fly.toml
docs/agents/: example_tools.md  registry.md  role_generation.md  skills_feature.md  tool_creation.md  tools.md
docs/configuration/: guardrails.md  model-aliases.md  ollama.md  providers.md  token_control.md
docs/core/: audit.md  capabilities.md  cost-tracking.md  evals.md  ingestion.md  intent_sensing.md  memory.md  multimodal.md  observability.md  oci-distribution.md  rag-guide.md  reasoning.md  reports.md  structured-output.md  tool-search.md  triggers.md
docs/getting-started/: agent-spec-import.md  chat.md  choosing-features.md  cli.md  cloud-deploy.md  discord.md  docker.md  installation.md  installer.md  langchain-import.md  pydanticai-import.md  rag-quickstart.md  setup.md  shareable-templates.md  telegram.md  template-tutorial.md  tutorial.md
docs/interfaces/: a2a.md  chat_endpoint.md  dashboard.md  design-system.md  facehash_avatars.md  mcp-gateway.md  server.md  tui.md
docs/operations/: cicd.md  deprecations.md  doctor.md  plan.md  pypi_publish.md  release_preparation.md  smoke_tests.md  telemetry.md  testing.md
docs/orchestration/: agent_composer.md  autonomy.md  blackboard.md  delegation.md  durability.md  flow.md  multi-agent-guide.md  patterns-guide.md  pipelines.md  sinks.md  team_mode.md
docs/security/: agent-policy.md  approvals.md  audit-chain.md  auth.md  bubblewrap.md  cerbos.md  comparison.md  docker-sandbox.md  sandbox-comparison.md  sandbox.md  security.md  ssh-sandbox.md  tool_permission_system.md  vault.md
docs/specs/: dashboard-prd.md
examples/: .env.example
examples/compose/: compose.yaml
examples/evals/: hello-world-eval.yaml  quality-eval.yaml  web-searcher-eval.yaml
examples/flows/: flow.yaml
examples/policies/: README.md  agent_policy.yaml  audit_policy.yaml  daemon_policy.yaml  derived_roles.yaml  ingest_policy.yaml  memory_policy.yaml  tool_policy.yaml
examples/roles/: audio-assistant.yaml  auto-skill-demo.yaml  capabilities-demo.yaml  cerbos-tool-auth.yaml  changelog-generator.yaml  changelog-slack.yaml  ci-explainer.yaml  clarify-researcher.yaml  code-reviewer.yaml  deploy-notifier.yaml  deployment-checker.yaml  discord-assistant.yaml  docker-sandbox-hardened.yaml  docker-sandbox.yaml  email-assistant.yaml  fallback-demo.yaml  full-tools-assistant.yaml  github-tracker.yaml  hello-world.yaml  invoice-classifier.yaml  long-running-analyst.yaml  memory-assistant.yaml  ops-checklist.md  ops-heartbeat.yaml  pr-reviewer.yaml  reloadable-assistant.yaml  rich-memory-assistant.yaml  sandboxed-dev-assistant.yaml  script-runner.yaml  secure-api-gateway.yaml  skill-demo.yaml  slack-echo.yaml  telegram-assistant.yaml  thinker.yaml  traced-agent.yaml  uptime-monitor.yaml  web-monitor.yaml  web-reader.yaml  web-searcher.yaml  webhook-processor.yaml
examples/skills/: code-tools.md
examples/teams/: debate.yaml
initrunner/: __init__.py  _async.py  _compat.py  _constants.py  _examples_catalog.json  _graph.py  _html.py  _ids.py  _log.py  _paths.py  _signal.py  _text.py  _yaml.py  authz.py  config.py  deprecations.py  examples.py  hub.py  middleware.py  model_aliases.py  observability.py  registry.py  report.py  role_generator.py  services.py  templates.py
initrunner/_report_templates/: changelog.md.j2  ci-fix.md.j2  default.md.j2  pr-review.md.j2
initrunner/_static/: app.js  daisyui.css  style.css
initrunner/_templates/: _macros.html  _nav.html  base.html
initrunner/a2a/: server.py
initrunner/agent/: _env.py  _paths.py  _subprocess.py  _truncate.py  _urls.py  api_tools.py  approval.py  auto_skills.py  clarify.py  delegation.py  docker_sandbox.py  executor.py  executor_auth.py  executor_models.py  executor_output.py  executor_retry.py  git_tools.py  history.py  history_compaction.py  history_summarizer.py  loader.py  memory_capture.py  memory_consolidation.py  memory_ops.py  output.py  permissions.py  plugins.py  policies.py  prompt.py  python_tools.py  reasoning.py  reflection.py  sandbox.py  schema.py  shell_tools.py  skills.py  slack_tools.py  sql_tools.py  templating.py  tool_events.py
initrunner/api/: __init__.py  _helpers.py  _streaming.py  app.py  auth.py  authz.py  facehash.py  models.py  state.py
initrunner/audit/: _hmac.py  _redact.py  logger.py  null.py
initrunner/cli/: _ephemeral.py  _helpers.py  _options.py  main.py  (+36 more)
scripts/: build-dashboard.sh  build_examples_catalog.py  release.sh
tests/: conftest.py  test_a2a.py  test_agent_builder.py  test_agent_principal.py  test_agent_spec_export.py  test_agent_spec_import.py  test_aggregate_audit.py  test_api_daemon.py  test_api_routes.py  test_api_tools.py  test_approval.py  test_audio_tools.py  test_audit.py  test_audit_cost_queries.py  test_audit_hooks.py  test_audit_redact.py  test_authz.py  test_authz_resolver.py  test_auto_ingest_progress.py  test_auto_ingest_stale.py  test_auto_skills.py  test_autonomous.py  test_blackboard.py  test_budget_cost.py  test_budget_persistence.py  test_calculator_tools.py  test_capabilities.py  test_cerbos_toolset.py  test_chat.py  test_chat_ui.py  test_chunker.py  test_circuit_breaker.py  test_clarify.py  test_cli.py  test_cli_dashboard.py  test_cli_desktop.py  test_cli_inline_setup.py  test_cli_preflight.py  test_compat.py  test_compose_async_internals.py  (+226 more)
(+717 files in other folders)
