[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "initrunner"
dynamic = ["version"]
description = "Define AI agent roles in YAML and run them anywhere — CLI, API server, or autonomous daemon"
readme = "README.md"
license = "MIT OR Apache-2.0"
license-files = ["LICENSE-MIT", "LICENSE-APACHE"]
authors = [{ name = "vladimir kesler", email = "contact@initrunner.ai" }]
keywords = ["ai", "agent", "ai-agents", "autonomous-agents", "runner", "role", "llm", "pydantic-ai", "mcp", "rag", "no-code", "openai-compatible", "yaml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai-slim[openai,fastmcp]>=1.71.0",
    "pydantic>=2.11",
    "typer>=0.21.1",
    "pyyaml>=6.0.3",
    "rich>=14.3.2",
    "lancedb>=0.29.2",
    "watchfiles>=1.1.1",
    "croniter>=6.0.0",
    "beautifulsoup4>=4.13.2",
    "markdownify>=1.2.2",
    "python-dotenv>=1.2.1",
    "jinja2>=3.1",
]

[project.optional-dependencies]
ingest = ["pymupdf4llm>=0.2.9", "python-docx>=1.2.0", "openpyxl>=3.1.5"]
local-embeddings = ["fastembed>=0.7.4"]
search = ["ddgs>=9.10.0"]
audio = ["youtube-transcript-api>=1.2.4"]
safety = ["better-profanity>=0.7.0"]
anthropic = ["pydantic-ai-slim[anthropic]>=1.71.0"]
google = ["pydantic-ai-slim[google]>=1.71.0"]
groq = ["pydantic-ai-slim[groq]>=1.71.0"]
mistral = ["pydantic-ai-slim[mistral]>=1.71.0"]
all-models = ["pydantic-ai-slim[anthropic,google,groq,mistral,cohere,bedrock,xai]>=1.71.0"]
observability = [
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-logging>=0.41b0",
]
telegram = ["python-telegram-bot>=21.0"]
discord = ["discord.py>=2.3"]
channels = ["python-telegram-bot>=21.0", "discord.py>=2.3"]
authz = ["cerbos>=0.15.1"]
dashboard = ["fastapi>=0.135.2", "uvicorn>=0.42.0"]
desktop = ["fastapi>=0.135.2", "uvicorn>=0.42.0", "pywebview>=6.1"]
all = [
    "initrunner[ingest]",
    "initrunner[search]",
    "initrunner[audio]",
    "initrunner[safety]",
    "initrunner[all-models]",
    "initrunner[observability]",
    "initrunner[channels]",
    "initrunner[authz]",
    "initrunner[dashboard]",
]

[project.scripts]
initrunner = "initrunner.cli.main:app_entry"
initrunner-browser-mcp = "initrunner.mcp.browser:main"

[project.urls]
Repository = "https://github.com/vladkesler/initrunner"
Changelog = "https://github.com/vladkesler/initrunner/blob/main/CHANGELOG.md"
Issues = "https://github.com/vladkesler/initrunner/issues"

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.3.1",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]

[tool.hatch.version]
path = "initrunner/__init__.py"

[tool.hatch.build]
artifacts = ["initrunner/dashboard/_static/**"]

[tool.hatch.build.targets.wheel]
packages = ["initrunner"]

[tool.pytest.ini_options]
timeout = 60

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "RUF",  # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"initrunner/_yaml.py" = ["UP047"]  # TypeVar needed for Python 3.11 compat (PEP 695 is 3.12+)

[tool.ruff.lint.isort]
known-first-party = ["initrunner"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.rules]
unused-type-ignore-comment = "ignore"

[tool.ty.environment]
python-version = "3.13"
